--- a/Index.html
+++ b/Index.html
@@ -9,10 +9,10 @@
         <h1>Welcome! My name is Cyrus Burns</h1>
         <div id="introduction">
             <h2>My Story</h2>
-                <p>"I was born in the District of Columbia and lived there until I turned 10 and moved to New Orleans, LA with my father."
+                <p>I was born in the District of Columbia and lived there until I turned 10 and moved to New Orleans, LA with my father.
                 </p>
             <h2>Education</h2>
-                <p>"I studied at Benjamin Franklin High School and am currently a Freshman at Loyola University New Orleans"
+                <p>I studied at Benjamin Franklin High School and am currently a Freshman at Loyola University New Orleans
                 </p>
         </div>
     </body>
