I added a profile picture and a personal video

--- a/Index.html
+++ b/Index.html
@@ -6,14 +6,19 @@
     </head>
     
     <body>
+        <img src="Images/Cyrus%20Profile.jpg" width="320" height="300" alt="Your home boy Cyrus" controls>
         <h1>Welcome! My name is Cyrus Burns</h1>
         <div id="introduction">
             <h2>My Story</h2>
-                <p>I was born in the District of Columbia and lived there until I turned 10 and moved to New Orleans, LA with my father.
+                <p>I was born in the District of Columbia and lived there until I turned 10. In 2009, I moved to New Orleans, LA with my father. 
                 </p>
-            <h2>Education</h2>
+            <h3>Education</h3>
                 <p>I studied at Benjamin Franklin High School and am currently a Freshman at Loyola University New Orleans
                 </p>
+        </div>
+        <div id="social media">
+            <h2>My Youtube</h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fMKfQpP2UNs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </body>
 </html>
