--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
             <main>
                 <section style="background-color: purple">
                     <h2>My Story</h2>
-                    <p>I was born in the <strong>District of Columbia</strong> and lived there until I turned 10. In 2009, I moved to <strong>New Orleans, LA</strong> with my father. I studied at Benjamin Franklin High School and am currently a Freshman at <em>Loyola University New Orleans</em></p>
+                    <p>I was born in the <strong>District of Columbia</strong> and lived there until I turned 10. In 2009, I moved to <strong>New Orleans, LA</strong> with my father. I studied at <span style="font-size: 20px">Benjamin Franklin High School</span> and am currently a Freshman at <em>Loyola University New Orleans</em></p>
                 </section>
                 
                 <section>
