--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,16 @@
                     <h2>Social Media</h2>
                     
                     <ul>
-                        <li><a href="https://www.facebook.com/cyrus.burns2" target="_blank">Facebook</a
+                        <li>
+                            <a href="https://www.facebook.com/cyrus.burns2" target="_blank"><img height="40" src="https://banner2.kisspng.com/20171216/213/facebook-logo-png-5a35528eaa4f08.7998622015134439826976.jpg">
+                            </a>
                         </li>
-                        <li><a href="https://www.instagram.com/cburnnns/" target="_blank">Instagram</a></li>
+                        <li>
+                            <a href="https://www.instagram.com/cburnnns/" target="_blank">Instagram</a>
+                        </li>
+                        <li>
+                            <a href="mailto:cyrusmburns1018@gmail.com">cyrusmburns1018@gmail.com</a>
+                        </li>
                     </ul>
                 </section>
                 
